--- a/index.html
+++ b/index.html
@@ -105,7 +105,14 @@
   <div id="trialControls"></div>
 
   <script>
-/* --------------------------------------------------
+
+    async function loadCSVData(blockType) {
+  const response = await fetch(BLOCK_FILES[blockType]);
+  const text = await response.text();
+  const lines = text.trim().split('\n').slice(1); // skip header
+  const parsed = lines.map(line => line.split(','));
+  blocks[blockType] = parsed;
+    /* --------------------------------------------------
    HELPER – write every screen INSIDE #visual-container
 --------------------------------------------------*/
 function updateScreen(html,background=null){
@@ -488,9 +495,10 @@ function runPracticeTrials(blockType){
       }, 1500);
     }
 
-    function startRealTrials() {
-  rebuildBaseHTML();      // sets up hidden videos/images and resets state
-  updatePlayButton();     // adds the Start Trial 1 of 2 button
+async function startRealTrials() {
+  await loadCSVData("tempo");   // <-- ensures tempo_trials.csv is loaded first
+  rebuildBaseHTML();             // resets visuals and state
+  updatePlayButton();            // adds "Start TEMPO Trial 1 of 2" button
 }
     /* --------------------------------------------------
        REAL TRIALS  (unchanged logic, but no more document.body manipulation)
